--- a/src/components/AutoSearch.css
+++ b/src/components/AutoSearch.css
@@ -16,7 +16,7 @@ table {
 }
 
 /* th,
-td {
+td { dont touch the system
   padding: 8px 12px;
   text-align: center;
   border-bottom: 1px solid #ddd;
@@ -95,7 +95,8 @@ button {
 .button-container {
   display: flex;
   /* Use flexbox to create a horizontal layout */
-  align-items: center;
+  align-items: left;
+  margin-right: "20px";
   /* Center items vertically */
 }
 
@@ -542,4 +543,308 @@ tr.selected:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+
+
+.selectpicker option
+{
+        border: none;
+        background-color: white;
+        outline: none;
+        -webkit-appearance: none;
+        -moz-appearance : none;
+        color: #14B1B2;
+        font-weight: bold;
+        font-size: 30px;
+        margin: 0;
+        padding-left: 0;
+        margin-top: -20px;
+        background: none;
+    }
+.selectpicker
+{
+        border: none;
+        background-color: white;
+        outline: none;
+        -webkit-appearance: none;
+        -moz-appearance : none;
+        color: #14B1B2;
+        font-weight: bold;
+        font-size: 30px;
+        margin: 0;
+        padding-left: 0;
+        margin-top: -20px;
+        background: none;
+    }
+
+
+/* *{
+  box-sizing:border-box;
+  margin:0;
+  padding:0;
+}
+body {
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background-color: #212121;
+  font-family:arial;
+}
+.container {
+  transform-style: preserve-3d;
+  perspective: 1000px;
+}
+
+.pane {
+  outline: 2px solid blue;
+  box-shadow: 0 0 10px blue, inset 0 0 10px #00ff6a77;
+  height: 1cm;
+  width: 4.5cm;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+  transition: 0.7s ease;
+}
+
+.input {
+  display: none;
+}
+
+.label {
+  height: 1cm;
+  width: 1.5cm;
+  float: left;
+  font-weight: 600;
+  letter-spacing: -1px;
+  font-size: 14px;
+  padding: 0px;
+  position: relative;
+  z-index: 1;
+  color: blue;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.selection {
+  display: none;
+  position: absolute;
+  height: 1cm;
+  width: calc(4.5cm / 3);
+  z-index: 0;
+  left: 0;
+  top: 0;
+  box-shadow: 0 0 10px darkblue;
+  transition: .15s ease;
+}
+
+.label:has(input:checked) {
+  color: #212121;
+}
+
+.pane:has(.label:nth-child(1):hover) {
+  transform: rotateY(-30deg);
+}
+
+.pane:has(.label:nth-child(3):hover) {
+  transform: rotateY(35deg);
+}
+
+.label:has(input:checked) ~ .selection {
+  background-color: blue;
+  display: inline-block;
+}
+
+.label:nth-child(1):has(input:checked) ~ .selection {
+  transform: translateX(calc(4.5cm * 0/3));
+}
+
+.label:nth-child(2):has(input:checked) ~ .selection {
+  transform: translateX(calc(4.5cm * 1/3));
+}
+
+.label:nth-child(3):has(input:checked) ~ .selection {
+  transform: translateX(calc(4.5cm * 2/3));
+} */
+
+
+
+
+
+
+
+
+.btnss{
+  border: none;
+  /* background: none; */
+  /* cursor: pointer; */
+}
+
+.pseudo-search {
+  display: inline;
+  border: 2px solid #ccc;
+  border-radius: 100px;
+  padding: 10px 15px;
+  transition: background-color 0.5 ease-in-out;
+
+  input {
+    border: 0;
+    background-color: transparent;
+    width: 200px;
+
+   
+  }
+  
+  /* button, i {
+    border: none;
+    background: none;
+    cursor: pointer;
+  }
+  
+  select {
+    border: none;
+  } */
+
+}
+
+
+.input-group-addon.primary {
+  color: rgb(255, 255, 255);
+  background-color: rgb(50, 118, 177);
+  border-color: rgb(40, 94, 142);
+}
+.input-group-addon.success {
+  color: rgb(255, 255, 255);
+  background-color: rgb(92, 184, 92);
+  border-color: rgb(76, 174, 76);
+}
+.input-group-addon.info {
+  color: rgb(255, 255, 255);
+  background-color: rgb(57, 179, 215);
+  border-color: rgb(38, 154, 188);
+}
+.input-group-addon.warning {
+  color: rgb(255, 255, 255);
+  background-color: rgb(240, 173, 78);
+  border-color: rgb(238, 162, 54);
+}
+.input-group-addon.danger {
+  color: rgb(255, 255, 255);
+  background-color: rgb(217, 83, 79);
+  border-color: rgb(212, 63, 58);
+}
+
+
+.button-21 {
+  align-items: center;
+  appearance: none;
+  background-color: #3EB2FD;
+  background-image: linear-gradient(1deg, #4F58FD, #149BF3 99%);
+  background-size: calc(100% + 20px) calc(100% + 20px);
+  border-radius: 10px;
+  border-width: 0;
+  box-shadow: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: CircularStd,sans-serif;
+  font-size: 1rem;
+  height: auto;
+  justify-content: center;
+  line-height: 1.5;
+  /* padding: 6px 20px; */
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: background-color .2s,background-position .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: top;
+  white-space: nowrap;
+}
+
+.button-21:active,
+.button-21:focus {
+  outline: none;
+}
+
+.button-21:hover {
+  background-position: -20px -20px;
+}
+
+.button-21:focus:not(:active) {
+  box-shadow: rgba(40, 170, 255, 0.25) 0 0 0 .125em;
+}
+
+
+.button-87 {
+  /* margin: 10px; */
+  /* padding: 15px 30px; */
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border-radius: 10px;
+  display: block;
+  border: 0px;
+  font-weight: 700;
+  box-shadow: 0px 0px 14px -7px #f09819;
+  background-image: linear-gradient(45deg, #FF512F 0%, #F09819  51%, #FF512F  100%);
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-87:hover {
+  background-position: right center;
+  /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
+.button-87:active {
+  transform: scale(0.95);
+}
+.button-88 {
+  display: flex;
+  align-items: center;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  padding: 0.7em 1.4em 0.7em 1.1em;
+  color: white;
+  background: #ad5389;
+  background: linear-gradient(0deg, rgba(20,167,62,1) 0%, rgba(102,247,113,1) 100%);
+  border: none;
+  box-shadow: 0 0.7em 1.5em -0.5em #14a73e98;
+  letter-spacing: 0.05em;
+  border-radius: 10px;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-88:hover {
+  box-shadow: 0 0.5em 1.5em -0.5em #14a73e98;
+}
+
+.button-88:active {
+  box-shadow: 0 0.3em 1em -0.5em #14a73e98;
+}
+
+.welcome{
+  float: right;
+  font-size: 26px;
+  font-weight: 700;
+  margin-right: 20px;
+ line-height: 20px;
+letter-spacing: 1px;
+color: green;
+cursor: auto;
 }
