--- a/src/components/Output/tabs.css
+++ b/src/components/Output/tabs.css
@@ -57,7 +57,7 @@ label {
   font-weight: 800;
   font-size: 20px;
   display: block;
-  text-decoration:underline;
+  /* text-decoration:underline; */
   float: left;
   width: 50%;
   padding: 1.0em;
@@ -81,12 +81,13 @@ label {
 }
 
 .tab_container [id^="tab"]:checked + label {
-  background: #fff;
-  box-shadow: inset 0 3px #0CE;
+  background: #008095;
+  color: white;
+  box-shadow: inset 0 3px #008095;
 }
 
 .tab_container [id^="tab"]:checked + label .fa {
-  color: #0CE;
+  color: white;
 }
 
 label .fa {
