--- a/src/components/SearchOutput.css
+++ b/src/components/SearchOutput.css
@@ -108,7 +108,7 @@ button {
 /* Style for the container */
 .table-container {
   text-align: center;
-  padding: 20px;
+  padding: 60px 20px 20px 20px;
 }
 
 /* Style for the division dropdown container */
